--- a/public/html/index.html
+++ b/public/html/index.html
@@ -27,9 +27,9 @@
 			<p ng-show="isflag">显示ng-show</p>
 			<p ng-hide="isflag">显示ng-hide</p>
 			<hr/>
-			<p>测试ng-repeat 以及过滤器</p>
+			<p>测试ng-repeat 以及过滤器，$rootScope代码中lastname 是定义在不同的controll中的</p>
 			<ul>
-				<li ng-repeat="x in list | orderBy:'name'"><span>{{ x.name }}</span><span>{{ $index }}</span></li>
+				<li ng-repeat="x in list | orderBy:'name'"><span>{{ x.name }}{{ lastname }}</span><span>{{ $index }}</span></li>
 			</ul>
 			<hr/>
 			<!-- deleted为true增加strike important为true 增加bold类 -->
@@ -57,6 +57,9 @@
 			<div ng-include="'template.html'"></div>
 			<div ng-include="data.url"></div>
 			<div ng-include="getUrl()"></div>
+		</div>
+		<!-- 新的controller -->
+		<div ng-controller="second">
 		</div>
 		<!-- 数据绑定 -->
 		<hr/>
